--- a/resources/assets/css/components.css
+++ b/resources/assets/css/components.css
@@ -2,10 +2,10 @@
 Template Name: UBold Dashboard
 Author: CoderThemes
 Email: coderthemes@gmail.com
-File: Components
+File: Base
 */
 /* =============
-  == Components List==
+  == Base List==
 
    - Buttons
    - Checkbox and radio
