--- a/resources/assets/less/components.less
+++ b/resources/assets/less/components.less
@@ -6,11 +6,11 @@
 Template Name: UBold Dashboard
 Author: CoderThemes
 Email: coderthemes@gmail.com
-File: Components
+File: Component
 */
 
 /* =============
-  == Components List==
+  == Component List==
 
    - Buttons
    - Checkbox and radio
@@ -2487,7 +2487,7 @@ table[data-toggle="table"] {
 .wizard > .content > .body {
   padding: 0px;
   position: relative;
-  
+
   input {
     border: 1px solid #E3E3E3;
   }
